--- a/css/media-query.css
+++ b/css/media-query.css
@@ -7,6 +7,7 @@
 
     section#login {
         width: 80vw;
+        height: 290px
     }
 
     section#login > div#img {
@@ -19,6 +20,10 @@
         float: right;
         width: 70%;
     }
+
+    section#login > div#form > p {
+        font-size: 1em;
+    }
 }
 
 @media screen and (min-width:992px) {
@@ -29,6 +34,7 @@
 
     section#login {
         width: 930px;
+        height: 340px;
 
     }
 
@@ -48,7 +54,8 @@
     }
 
     section#login > div#form > p {
-        font-size: 1.2em;
+        font-size: 1.1em;
+        margin-bottom: 15px;
     }
     
 }
